src/test/deca/syntax/invalid/created/operande_manquante/neq_a_.deca
// Description :
//    test neq pour une opérande manquante
//
// Resultats :
//		Erreur syntaxique
//    	Ligne 11: operante manquante

{
c = a != ;
}
